New endpoint for the resource provisioner
