# arapp/static/swagger/swagger.yaml
@@ -2,7 +2,7 @@ swagger: '2.0'
 info:
   title: Appliance Registry API
   description: Store appliances with the Appliance Registry API.
-  version: "0.1.3"
+  version: "0.1.4"
 # the domain of the service
 host: 127.0.0.1:8003
 # array of all schemes that your API supports
@@ -360,6 +360,37 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /scripts/{appliance}/{action}/:
+    get:
+      summary: Get the script corresponding to an appliance and an action.
+      description: |
+        Get the script corresponding to an appliance and an action. Authentification is not required.
+      parameters:
+        - name: appliance
+          in: path
+          description: Name of the appliance
+          required: true
+          type: string
+        - name: action
+          in: path
+          description: Name of the action
+          required: true
+          type: string
+      tags:
+        - Scripts
+      responses:
+        200:
+          description: The script matching
+          schema:
+            $ref: '#/definitions/Script'
+        404:
+          description: Unexisting appliance or no script with this name for this appliance
+          schema:
+            $ref: '#/definitions/Error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /appliances/:
     get:
       summary: Get the list of all the appliances registered.
@@ -663,7 +694,6 @@ definitions:
   ScriptPost:
     type: object
     required:
-      - name
       - code
       - appliance
       - action
